crates/ars-components/src/utility/snapshots/ars_components__utility__landmark__tests__landmark_fallback_main.snap
---
source: crates/ars-components/src/utility/landmark.rs
expression: snapshot_attrs(&attrs)
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "landmark",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Fallback landmark",
            ),
        ),
        (
            Id,
            String(
                "fallback-main",
            ),
        ),
        (
            Role,
            String(
                "main",
            ),
        ),
    ],
    styles: [],
}
