crates/ars-components/src/utility/snapshots/ars_components__utility__landmark__tests__landmark_root_form_labelled.snap
---
source: crates/ars-components/src/utility/landmark.rs
expression: "snapshot_attrs(&labelled_api(Props::new().id(\"form\").role(Role::Form),\n\"Account settings\").root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "landmark",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Account settings",
            ),
        ),
        (
            Id,
            String(
                "form",
            ),
        ),
    ],
    styles: [],
}
